[project]
name = "tugboat"
version = "0.1.0"
description = "Simple utilities to generate a Dockerfile from a directory or project, build the corresponding Docker image, push the image to DockerHub, and publicly share the project via Binder."
readme = "README.md"
authors = [
    { name = "Daniel Molitor", email = "molitdj97@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pigar>=2.2.0",
    "pygit2>=1.19.3",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
tugboat-py = "tugboat:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
